# Kobo-Aura-HD-Clean-Articles

./: CMakeLists.txt  Debug.h  LICENSE  README.md  deletedir.h  main.cpp
cmake/: color_diagnostics.cmake
